--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,12 +19,12 @@ jobs:
           path: public/
 
   test:
-
+    needs: build
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        os: [ubuntu-lastest, windows-2016]
+        os: [ubuntu-latest, windows-2016]
         node-version: [8.x, 10.x]
 
     steps:
